@@ -87,34 +87,6 @@
   :group (appearance StyleTab:group StyleTab:settings-group)
   :type font)
 
-(defcustom styletab:custom-colors nil "Customize title text colors. (Don't use styles defaults.)"
-  :group (appearance StyleTab:group StyleTab:settings-group)
-  :type boolean)
-
-(defcustom styletab:focused-color "#E5E5E5"
-  "Focused title text color."
-  :group (appearance StyleTab:group StyleTab:settings-group)
-  :depends styletab:custom-colors
-  :type color)
-
-(defcustom styletab:highlighted-color "#FDFDFD"
-  "Highlighted title text color."
-  :group (appearance StyleTab:group StyleTab:settings-group)
-  :depends styletab:custom-colors
-  :type color)
-
-(defcustom styletab:inactive-color "#B1B1B1"
-  "Inactive title text color."
-  :group (appearance StyleTab:group StyleTab:settings-group)
-  :depends styletab:custom-colors
-  :type color)
-
-(defcustom styletab:inactive-highlighted-color "#CBCBCB"
-  "Inactive Highlighted title text color."
-  :group (appearance StyleTab:group StyleTab:settings-group)
-  :depends styletab:custom-colors
-  :type color)
-
 (mapc
  (lambda (arg)
    (let ((type-list ;; ":type" in defcustom
@@ -182,21 +154,13 @@
 
 (define title-colors-images
   (lambda ()
-    (if (eq styletab:custom-colors t)
-        (title-colors-custom)
       (case styletab:style
             ((Reduce) (title-colors-reduce))
             ((Dark) (title-colors-dark))
             ((DarkColor) (title-colors-dark))
             ((Silver) (title-colors-silver))
             ((SilverColor) (title-colors-silver))
-            ((Smoothly) (title-colors-smoothly))))))
-
-(define title-colors-custom
-  (lambda ()
-    `((focused . ,styletab:focused-color) (highlighted . ,styletab:highlighted-color) (clicked . ,styletab:highlighted-color) 
-      (inactive . ,styletab:inactive-color) (inactive-highlighted . ,styletab:inactive-highlighted-color) 
-      (inactive-clicked . ,styletab:inactive-highlighted-color))))
+            ((Smoothly) (title-colors-smoothly)))))
 
 (define title-colors-reduce
   (lambda ()
@@ -2128,10 +2092,6 @@
 
 (custom-set-property 'styletab:title-font ':after-set reframe-all)
 (custom-set-property 'styletab:custom-colors ':after-set reframe-all)
-(custom-set-property 'styletab:focused-color ':after-set reframe-all)
-(custom-set-property 'styletab:highlighted-color ':after-set reframe-all)
-(custom-set-property 'styletab:inactive-color ':after-set reframe-all)
-(custom-set-property 'styletab:inactive-highlighted-color ':after-set reframe-all)
 (custom-set-property 'styletab:style ':after-set clear-cache-reload-frame-style)
 (custom-set-property 'styletab:title-dimension ':after-set clear-cache-reframe)
 (custom-set-property 'styletab:custom-button-width ':after-set clear-cache-reframe)
