@@ -5,6 +5,8 @@
 	* lisp/sawfish/wm/frames.jl: fixed changing font-color for horizontal
 	tabbars (vertical don't show text (yet))
 
+	* themes/StyleTab/theme.jl: remove custom color-changing option
+
 2011-05-05  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/commands/jump-or-exec.jl: reverted 2 commits
 
